Finish dropdowns on product detail and cart pages

--- a/assignment_6/cart.html
+++ b/assignment_6/cart.html
@@ -32,8 +32,20 @@
                     <div class="shopping-cart-item-name"><span class="underlined">Original</span></div>
                 </div>
                 <div class="shopping-cart-item-right">
-                    <div class="shopping-cart-item-glazing-dropdown"></div>
-                    <div class="shopping-cart-item-quantity-dropdown"></div>
+                    <select name="quantity" class="cart-dropdown-appearance">
+                        <option disabled hidden selected>Quantity</option>
+                        <option value="1">1 roll</option>
+                        <option value="3">3 rolls</option>
+                        <option value="6">6 rolls</option>
+                        <option value="12">12 rolls</option>
+                    </select>
+                    <select name="glazing" class="cart-dropdown-appearance">
+                        <option disabled hidden selected>Glazing</option>
+                        <option value="None">none</option>
+                        <option value="Sugar Milk">sugar milk</option>
+                        <option value="Vanilla Milk">vanilla milk</option>
+                        <option value="Double Chocolate">double chocolate</option>
+                    </select>
                     <div class="shopping-cart-item-price"><span class="golden-color">$</span> 3.00</div>
                     <button class="delete-button golden-icon">
                     </button>
@@ -46,8 +58,20 @@
                     <div class="shopping-cart-item-name"><span class="underlined">Blackberry</span></div>
                 </div>
                 <div class="shopping-cart-item-right">
-                    <div class="shopping-cart-item-glazing-dropdown"></div>
-                    <div class="shopping-cart-item-quantity-dropdown"></div>
+                    <select name="quantity" class="cart-dropdown-appearance">
+                        <option disabled hidden selected>Quantity</option>
+                        <option value="1">1 roll</option>
+                        <option value="3">3 rolls</option>
+                        <option value="6">6 rolls</option>
+                        <option value="12">12 rolls</option>
+                    </select>
+                    <select name="glazing" class="cart-dropdown-appearance">
+                        <option disabled hidden selected>Glazing</option>
+                        <option value="None">none</option>
+                        <option value="Sugar Milk">sugar milk</option>
+                        <option value="Vanilla Milk">vanilla milk</option>
+                        <option value="Double Chocolate">double chocolate</option>
+                    </select>
                     <div class="shopping-cart-item-price"><span class="golden-color">$</span> 3.00</div>
                     <button class="delete-button golden-icon">
                     </button>
@@ -60,8 +84,20 @@
                     <div class="shopping-cart-item-name"><span class="underlined">Walnut</span></div>
                 </div>
                 <div class="shopping-cart-item-right">
-                    <div class="shopping-cart-item-glazing-dropdown"></div>
-                    <div class="shopping-cart-item-quantity-dropdown"></div>
+                    <select name="quantity" class="cart-dropdown-appearance">
+                        <option disabled hidden selected>Quantity</option>
+                        <option value="1">1 roll</option>
+                        <option value="3">3 rolls</option>
+                        <option value="6">6 rolls</option>
+                        <option value="12">12 rolls</option>
+                    </select>
+                    <select name="glazing" class="cart-dropdown-appearance">
+                        <option disabled hidden selected>Glazing</option>
+                        <option value="None">none</option>
+                        <option value="Sugar Milk">sugar milk</option>
+                        <option value="Vanilla Milk">vanilla milk</option>
+                        <option value="Double Chocolate">double chocolate</option>
+                    </select>
                     <div class="shopping-cart-item-price"><span class="golden-color">$</span> 3.00</div>
                     <button class="delete-button golden-icon">
                     </button>
