--- a/assignment_6/product-browsing.html
+++ b/assignment_6/product-browsing.html
@@ -26,7 +26,7 @@
             <p class="cinnamon-roll-name">Original</p>
             <div class="cinnamon-roll-card-text-container">
                 <a href="product-detail.html" class="connamon-roll-card-details">Details</a>
-                <button onclick="location.href='./product-detail.html'" type="button" class="cinnamon-roll-card-button">Add to Cart</button>
+                <button type="button" class="cinnamon-roll-card-button">Add to Cart</button>
             </div>
         </div>
         <div class="cinnamon-roll-card">
@@ -34,7 +34,7 @@
             <p class="cinnamon-roll-name">Blackberry</p>
             <div class="cinnamon-roll-card-text-container">
                 <a href="product-detail.html" class="connamon-roll-card-details">Details</a>
-                <button onclick="location.href='./product-detail.html'" type="button" class="cinnamon-roll-card-button">Add to Cart</button>
+                <button type="button" class="cinnamon-roll-card-button">Add to Cart</button>
             </div>
         </div>
         <div class="cinnamon-roll-card">
@@ -42,7 +42,7 @@
             <p class="cinnamon-roll-name">Walnut</p>
             <div class="cinnamon-roll-card-text-container">
                 <a href="product-detail.html" class="connamon-roll-card-details">Details</a>
-                <button onclick="location.href='./product-detail.html'" type="button" class="cinnamon-roll-card-button">Add to Cart</button>
+                <button type="button" class="cinnamon-roll-card-button">Add to Cart</button>
             </div>
         </div>
         <div class="cinnamon-roll-card">
@@ -51,16 +51,15 @@
             <p class="cinnamon-roll-subname">gluten free</p>
             <div class="cinnamon-roll-card-text-container">
                 <a href="product-detail.html" class="connamon-roll-card-details">Details</a>
-                <button onclick="location.href='./product-detail.html'" type="button" class="cinnamon-roll-card-button">Add to Cart</button>
+                <button type="button" class="cinnamon-roll-card-button">Add to Cart</button>
             </div>
         </div>
         <div class="cinnamon-roll-card">
             <div class="cinnamon-roll-card-image" id="cinnamon-roll-card-image-5"></div>
             <p class="cinnamon-roll-name">Pumpkin Spice</p>
-            <p class="cinnamon-roll-subname"></p>
             <div class="cinnamon-roll-card-text-container">
                 <a href="product-detail.html" class="connamon-roll-card-details">Details</a>
-                <button onclick="location.href='./product-detail.html'" type="button" class="cinnamon-roll-card-button">Add to Cart</button>
+                <button type="button" class="cinnamon-roll-card-button">Add to Cart</button>
             </div>
         </div>
         <div class="cinnamon-roll-card">
@@ -68,7 +67,7 @@
             <p class="cinnamon-roll-name">Caramel Peacan</p>
             <div class="cinnamon-roll-card-text-container">
                 <a href="product-detail.html" class="connamon-roll-card-details">Details</a>
-                <button onclick="location.href='./product-detail.html'" type="button" class="cinnamon-roll-card-button">Add to Cart</button>
+                <button type="button" class="cinnamon-roll-card-button">Add to Cart</button>
             </div>
         </div>
 
@@ -103,5 +102,6 @@
             <p>(412) 687-2494</p>
         </div>
     </footer>
+    <script src="./js/product-browsing.js"></script>
 </body>
 </html>
