Store user selection on product detail page

--- a/assignment_6/product-detail.html
+++ b/assignment_6/product-detail.html
@@ -58,7 +58,7 @@
                         <option value="Double Chocolate">double chocolate</option>
                     </select>
 
-                    <button onclick="location.href='./cart.html'" type="button" class="add-to-cart-button">Add</button>
+                    <button type="button" class="add-to-cart-button">Add</button>
                 </div>
 
             </div>
@@ -101,7 +101,7 @@
                         <option value="Double Chocolate">double chocolate</option>
                     </select>
 
-                    <button onclick="location.href='./cart.html'" type="button" class="add-to-cart-button">Add</button>
+                    <button type="button" class="add-to-cart-button">Add</button>
                 </div>
 
             </div>
@@ -143,7 +143,7 @@
                         <option value="Double Chocolate">double chocolate</option>
                     </select>
 
-                    <button onclick="location.href='./cart.html'" type="button" class="add-to-cart-button">Add</button>
+                    <button type="button" class="add-to-cart-button">Add</button>
                 </div>
 
             </div>
@@ -185,7 +185,7 @@
                         <option value="Double Chocolate">double chocolate</option>
                     </select>
 
-                    <button onclick="location.href='./cart.html'" type="button" class="add-to-cart-button">Add</button>
+                    <button type="button" class="add-to-cart-button">Add</button>
                 </div>
 
             </div>
@@ -227,7 +227,7 @@
                         <option value="Double Chocolate">double chocolate</option>
                     </select>
 
-                    <button onclick="location.href='./cart.html'" type="button" class="add-to-cart-button">Add</button>
+                    <button type="button" class="add-to-cart-button">Add</button>
                 </div>
 
             </div>
@@ -269,7 +269,7 @@
                         <option value="Double Chocolate">double chocolate</option>
                     </select>
 
-                    <button onclick="location.href='./cart.html'" type="button" class="add-to-cart-button">Add</button>
+                    <button type="button" class="add-to-cart-button">Add</button>
                 </div>
 
             </div>
