Finish adding items to shopping cart functionality and Update cart number on page top right corner

--- a/assignment_6/cart.html
+++ b/assignment_6/cart.html
@@ -11,7 +11,10 @@
     <section class="content-header-section" id="cart-header">
         <div class="content-header-section-overlay">
             <a class="home-icon-link" href="./index.html"><img src="./images/cinammon-roll-icon.png" class="home-icon golden-icon" width="50" height="50" alt="HOME"><span class="home-icon-text"><span class="underlined">BUN</span> <span class="underlined">BUN</span></span></a>
-            <a href="./cart.html"><img src="./images/shopping_cart.svg" class="cart-icon golden-icon" width="50" height="50" alt="Cart"></a>
+            <h1 class="cart-num"></h1>
+            <a href="./cart.html">
+                <img src="./images/shopping_cart.svg" class="cart-icon golden-icon" width="50" height="50" alt="Cart">
+            </a>
             <p class="content-page-title"><span class="underlined">Cart</span></p>
         </div>
     </section>
@@ -54,7 +57,7 @@
 
             <hr>
 
-            <div class="total-amount">Total:  <span class="golden-color">$</span> 21.00</div>
+            <div class="total-amount">Total:  <span class="golden-color">$</span></div>
             <button class="shopping-cart-checkout-button">Checkout</button>
         </div>
     </section>
@@ -88,5 +91,6 @@
         </div>
     </footer>
     <script src="./js/cart.js"></script>
+    <script src="./js/cart-item.js"></script>
 </body>
 </html>
