--- a/assignment_6/index.html
+++ b/assignment_6/index.html
@@ -11,6 +11,7 @@
     <section id="top-section">
         <div id="top-section-overlay">
             <a href="./index.html"><img src="./images/cinammon-roll-icon.png" class="home-icon golden-icon" width="50" height="50" alt="HOME"></a>
+            <h1 class="cart-num"></h1>
             <a href="./cart.html"><img src="./images/shopping_cart.svg" class="cart-icon golden-icon" width="50" height="50" alt="Cart"></a>
             <p class="homepage-title"><span class="underlined">Bun</span> <span class="underlined">Bun</span> Bake Shop</p>
         </div>
@@ -40,5 +41,6 @@
             </a>
         </div>
     </div>
+    <script src="./js/cart-item.js"></script>
 </body>
 </html>
