--- a/assignment_6/product-browsing.html
+++ b/assignment_6/product-browsing.html
@@ -12,6 +12,7 @@
     <section class="content-header-section" id="product-browsing-header">
         <div class="content-header-section-overlay">
             <a class="home-icon-link" href="./index.html"><img src="./images/cinammon-roll-icon.png" class="home-icon golden-icon" width="50" height="50" alt="HOME"><span class="home-icon-text"><span class="underlined">BUN</span> <span class="underlined">BUN</span></span></a>
+            <h1 class="cart-num"></h1>
             <a href="./cart.html"><img src="./images/shopping_cart.svg" class="cart-icon golden-icon" width="50" height="50" alt="Cart"></a>
             <p class="content-page-title">Pittsburgh's <span class="underlined">Finest</span> Cinnamon Rolls</p>
         </div>
@@ -103,5 +104,6 @@
         </div>
     </footer>
     <script src="./js/product-browsing.js"></script>
+    <script src="./js/cart-item.js"></script>
 </body>
 </html>
