--- a/assignment_6/product-detail.html
+++ b/assignment_6/product-detail.html
@@ -11,7 +11,10 @@
     <section class="content-header-section" id="product-detail-header">
         <div class="content-header-section-overlay">
             <a class="home-icon-link" href="./index.html"><img src="./images/cinammon-roll-icon.png" class="home-icon golden-icon" width="50" height="50" alt="HOME"><span class="home-icon-text"><span class="underlined">BUN</span> <span class="underlined">BUN</span></span></a>
-            <a href="./cart.html"><img src="./images/shopping_cart.svg" class="cart-icon golden-icon" width="50" height="50" alt="Cart"></a>
+            <h1 class="cart-num"></h1>
+            <a href="./cart.html">
+                <img src="./images/shopping_cart.svg" class="cart-icon golden-icon" width="50" height="50" alt="Cart">
+            </a>
             <p class="content-page-title"><span class="underlined">Product</span> Detail</p>
         </div>
     </section>
@@ -305,5 +308,6 @@
         </div>
     </footer>
     <script src="./js/product-detail.js"></script>
+    <script src="./js/cart-item.js"></script>
 </body>
 </html>
