Add comments to HTML files

--- a/assignment_6b/index.html
+++ b/assignment_6b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bun Bun Bake Shop</title>
     <link rel="stylesheet" href="./css/style.css">
+    <!-- the link to the google font file -->
     <link href="https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- top section of the screen, the banner image and page title -->
     <section id="top-section">
         <div id="top-section-overlay">
             <a href="./index.html"><img src="./images/cinammon-roll-icon.png" class="home-icon golden-icon" width="50" height="50" alt="HOME"></a>
@@ -16,6 +18,7 @@
             <p class="homepage-title"><span class="underlined">Bun</span> <span class="underlined">Bun</span> Bake Shop</p>
         </div>
     </section>
+    <!-- buttom section of the page, text details and images -->
     <section id="bottom-section">
         <p class="bottom-section-text"> <img src="./images/location-icon.svg" class="location-icon golden-icon" alt="" width="36" height="36"> Pittsburgh, PA <a href="https://www.google.com/maps/place/40%C2%B026'37.3%22N+79%C2%B056'41.6%22W/@40.443704,-79.9454352,19z/data=!3m1!4b1!4m6!3m5!1s0x0:0x0!7e2!8m2!3d40.4437032!4d-79.944888" class="underlined">MAP</a></p>
         <p class="bottom-section-text"><img src="./images/shipping-icon.svg" class="shipping-icon golden-icon" alt="" width="36" height="36"> We ship <span class="red-color"><strong>fresh</strong></span> everywhere in Pittsburgh!</p>
@@ -33,6 +36,7 @@
             </div> -->
         </a>
     </section>
+    <!-- contact icon on the bottom right of the screen -->
     <div class="contact-icon-wrapper">
         <div class="contact-icon golden-icon">
             <a href="./contact.html">
@@ -41,6 +45,7 @@
             </a>
         </div>
     </div>
+    <!-- link to js files -->
     <script src="./js/cart-item.js"></script>
 </body>
 </html>
