--- a/assignment_6b/product-browsing.html
+++ b/assignment_6b/product-browsing.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Products</title>
     <link rel="stylesheet" href="./css/style.css">
+    <!-- link to google font file -->
     <link href="https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
 </head>
 <body>
+    <!-- header section, including the icons, page title, and background banner image -->
     <section class="content-header-section" id="product-browsing-header">
         <div class="content-header-section-overlay">
             <a class="home-icon-link" href="./index.html"><img src="./images/cinammon-roll-icon.png" class="home-icon golden-icon" width="50" height="50" alt="HOME"><span class="home-icon-text"><span class="underlined">BUN</span> <span class="underlined">BUN</span></span></a>
@@ -17,11 +19,14 @@
             <p class="content-page-title">Pittsburgh's <span class="underlined">Finest</span> Cinnamon Rolls</p>
         </div>
     </section>
+    <!-- back button on the left of screen -->
     <a href="./index.html" class="back-button">
         <img src="./images/arrow_back.svg" class="back-arrow" alt="">
         <p class="underlined">Back</p>
     </a>
+    <!-- the container of six different product cards on the page -->
     <section class="cinnamon-roll-flex-container">
+        <!-- individual card for each product item -->
         <div class="cinnamon-roll-card">
             <div class="cinnamon-roll-card-image" id="cinnamon-roll-card-image-1"></div>
             <p class="cinnamon-roll-name">Original</p>
@@ -73,7 +78,7 @@
         </div>
 
     </section>
-
+    <!-- contact icon on the bottom right of the screen -->
     <div class="contact-icon-wrapper">
         <div class="contact-icon golden-icon">
             <a href="./contact.html">
@@ -82,6 +87,7 @@
             </a>
         </div>
     </div>
+    <!-- footer section across all pages -->
     <footer>
         <div class="footer-element left-footer">
             <p class="footer-title">Contact Info</p>
@@ -103,6 +109,7 @@
             <p>(412) 687-2494</p>
         </div>
     </footer>
+    <!-- links to js scripts -->
     <script src="./js/product-browsing.js"></script>
     <script src="./js/cart-item.js"></script>
 </body>
