--- a/assignment_6b/cart.html
+++ b/assignment_6b/cart.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- first section is for the header of the page -->
     <section class="content-header-section" id="cart-header">
         <div class="content-header-section-overlay">
             <a class="home-icon-link" href="./index.html"><img src="./images/cinammon-roll-icon.png" class="home-icon golden-icon" width="50" height="50" alt="HOME"><span class="home-icon-text"><span class="underlined">BUN</span> <span class="underlined">BUN</span></span></a>
@@ -18,6 +19,7 @@
             <p class="content-page-title"><span class="underlined">Cart</span></p>
         </div>
     </section>
+    <!-- the second section is the main content of the page -->
     <section class="shopping-cart-section">
         <a href="./product-browsing.html" class="back-button">
             <img src="./images/arrow_back.svg" class="back-arrow" alt="">
@@ -69,6 +71,7 @@
             </a>
         </div>
     </div>
+    <!-- footer element across most pages, using flexbox -->
     <footer>
         <div class="footer-element left-footer">
             <p class="footer-title">Contact Info</p>
@@ -90,6 +93,7 @@
             <p>(412) 687-2494</p>
         </div>
     </footer>
+    <!-- link to js files -->
     <script src="./js/cart.js"></script>
     <script src="./js/cart-item.js"></script>
 </body>
